--- a/ui/theme/src/css/defaults.css
+++ b/ui/theme/src/css/defaults.css
@@ -1,46 +1,6 @@
-@font-face {
-	font-family: Literata;
-	src: url('../assets/fonts/literata_regular.woff2') format('woff2'),
-		url('../assets/fonts/literata_regular.woff') format('woff'),
-		url('../assets/fonts/literata_regular.otf') format('opentype');
-	font-weight: normal;
-	font-style: normal;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: Literata;
-	src: url('../assets/fonts/literata_bold.woff2') format('woff2'),
-		url('../assets/fonts/literata_bold.woff') format('woff'),
-		url('../assets/fonts/literata_bold.otf') format('opentype');
-	font-weight: bold;
-	font-style: normal;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: Literata;
-	src: url('../assets/fonts/literata_italic.woff2') format('woff2'),
-		url('../assets/fonts/literata_italic.woff') format('woff'),
-		url('../assets/fonts/literata_italic.otf') format('opentype');
-	font-weight: normal;
-	font-style: italic;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: Literata;
-	src: url('../assets/fonts/literata_bold_italic.woff2') format('woff2'),
-		url('../assets/fonts/literata_bold_italic.woff') format('woff'),
-		url('../assets/fonts/literata_bold_italic.otf') format('opentype');
-	font-weight: bold;
-	font-style: italic;
-	font-display: swap;
-}
-
 body {
 	@apply box-border min-h-lvh w-full text-neutral-900 
-		bg-neutral-100 text-body font-body;
+		bg-neutral-100 text-body;
 }
 
 a {
