chore: front page scaffolding

--- a/ui/theme/src/css/defaults.css
+++ b/ui/theme/src/css/defaults.css
@@ -1,10 +1,12 @@
 body {
 	@apply box-border min-h-lvh w-full text-neutral-900 
 		bg-neutral-100 text-body;
+
+	--color-inherit: inherit;
 }
 
 a {
-	@apply text-neutral-600;
+	@apply text-neutral-900 underline underline-offset-4;
 
 	&:hover {
 		@apply text-opacity-60;
