feat: state-machines-for-the-rest-of-us

--- a/ui/theme/src/css/notes.css
+++ b/ui/theme/src/css/notes.css
@@ -5,6 +5,10 @@
 		@apply text-title font-bold text-balance;
 	}
 
+	& h2 {
+		@apply text-heading font-bold;
+	}
+
 	& ul {
 		@apply list-disc pl-24;
 	}
