feat: enable dark theme for code highlighting

--- a/ui/theme/src/css/defaults.css
+++ b/ui/theme/src/css/defaults.css
@@ -12,3 +12,10 @@ a {
 		@apply text-opacity-60;
 	}
 }
+
+.dark {
+	.shiki, .shiki span {
+		color: var(--shiki-light) !important;
+		background-color: var(--shiki-light-bg) !important;  
+	}
+}
