--- a/ui/theme/src/css/defaults.css
+++ b/ui/theme/src/css/defaults.css
@@ -19,3 +19,11 @@ a {
 		background-color: var(--shiki-dark-bg) !important;  
 	}
 }
+
+#modals {
+	@apply hidden;
+
+	&:has(*) {
+		@apply flex fixed inset-0 bg-neutral-900/50;
+	}
+}
