--- a/ui/theme/src/css/form.css
+++ b/ui/theme/src/css/form.css
@@ -1,12 +1,16 @@
 button {
-	@apply rounded-full bg-neutral-300 font-sans cursor-default 
+	@apply rounded-full bg-gray-200 text-gray-900 font-sans cursor-default 
 		px-16 h-32 inline-flex items-center justify-center;
 
+	&:focus-visible {
+		@apply outline-none ring-2 ring-offset-2 ring-blue ring-offset-neutral-100;
+	}
+
 	&:hover {
-		@apply bg-opacity-60;
+		@apply bg-gray-300;
 	}
 
 	&:active {
-		@apply bg-opacity-90;
+		@apply bg-gray-200;
 	}
 }
