--- a/ui/theme/src/css/notes.css
+++ b/ui/theme/src/css/notes.css
@@ -15,24 +15,24 @@
 
 	& table {
 		@apply mx-8 text-caption table-fixed border-collapse 
-			border border-neutral-300 bg-neutral-200;
+			border border-gray-300 bg-gray-200 text-gray-900;
 
 		max-width: calc(var(--max-width) - 16px);
 	}
 
 	& tr {
-		@apply border-b border-neutral-300;
+		@apply border-b border-gray-300;
 	}
 
 	& td {
-		@apply py-4 px-8 border-r border-neutral-300;
+		@apply py-4 px-8 border-r border-gray-300;
 	}
 
 	& thead {
-		@apply text-neutral-600 text-left bg-neutral-300;
+		@apply text-gray-600 text-left bg-gray-300;
 
 		& th {
-			@apply p-8 border-neutral-400 border-r;
+			@apply p-8 border-gray-400 border-r;
 		}
 
 		& th:last-child {
@@ -52,7 +52,7 @@
 	}
 
 	& code:not(pre code) {
-		@apply bg-neutral-300 px-4 rounded;
+		@apply bg-gray-300 px-4 rounded text-gray-900; 
 	}
 
 	& .callout {
