--- a/ui/theme/src/css/notes.css
+++ b/ui/theme/src/css/notes.css
@@ -1,72 +1,78 @@
-.note {
-	@apply grid leading-6 gap-y-24; 
-
-	& h1 {
-		@apply text-title font-bold text-balance;
+@layer components {
+	.callout {
+		@apply bg-yellow-100/40 text-black
+			dark:bg-yellow-500/20 dark:text-white;
 	}
 
-	& h2 {
-		@apply text-heading font-bold;
-	}
+	.note {
+		@apply grid leading-6 gap-y-24; 
 
-	& ul {
-		@apply list-disc pl-24;
-	}
-
-	& table {
-		@apply mx-8 text-caption table-fixed border-collapse 
-			border border-gray-300 bg-gray-200 text-gray-900;
-
-		max-width: calc(var(--max-width) - 16px);
-	}
-
-	& tr {
-		@apply border-b border-gray-300;
-	}
-
-	& td {
-		@apply py-4 px-8 border-r border-gray-300;
-	}
-
-	& thead {
-		@apply text-gray-600 text-left bg-gray-300;
-
-		& th {
-			@apply p-8 border-gray-400 border-r;
+		& h1 {
+			@apply text-title font-bold text-balance;
 		}
 
-		& th:last-child {
-			@apply border-none;
+		& h2 {
+			@apply text-heading font-bold;
 		}
-	}
 
-	& pre {
-		@apply p-8 text-caption rounded
-			overflow-scroll overscroll-x-contain;
-	}
-
-	& .code {
-		@apply bg-neutral-200 py-24 grid grid-cols-subgrid gap-24;
-
-		grid-column: 1 / -1;
-	}
-
-	& code:not(pre code) {
-		@apply bg-gray-300 px-4 rounded text-gray-900; 
-	}
-
-	& .callout {
-		@apply bg-warning/10 py-24
-			grid grid-cols-subgrid gap-24;
-
-		grid-column: 1 / -1;
-
-		& :last-child {
-			@apply mb-0;
+		& ul {
+			@apply list-disc pl-24;
 		}
-	}
 
-	& img {
-		@apply max-w-full;
+		& table {
+			@apply mx-8 text-caption table-fixed border-collapse 
+				border border-grey-300 bg-grey-200 text-grey-900;
+
+			max-width: calc(var(--max-width) - 16px);
+		}
+
+		& tr {
+			@apply border-b border-grey-300;
+		}
+
+		& td {
+			@apply py-4 px-8 border-r border-grey-300;
+		}
+
+		& thead {
+			@apply text-grey-600 text-left bg-grey-300;
+
+			& th {
+				@apply p-8 border-grey-400 border-r;
+			}
+
+			& th:last-child {
+				@apply border-none;
+			}
+		}
+
+		& pre {
+			@apply p-8 text-caption rounded
+				overflow-scroll overscroll-x-contain;
+		}
+
+		& .code {
+			@apply bg-neutral-100 py-24 grid grid-cols-subgrid gap-24;
+
+			grid-column: 1 / -1;
+		}
+
+		& code:not(pre code) {
+			@apply bg-grey-200 px-4 rounded text-black text-body-monospace;
+		}
+
+		& .callout {
+			@apply py-24 grid grid-cols-subgrid gap-24;
+
+			grid-column: 1 / -1;
+
+			& :last-child {
+				@apply mb-0;
+			}
+		}
+
+		& img {
+			@apply max-w-full;
+		}
 	}
 }
