fix: button sizing

--- a/ui/theme/src/css/form.css
+++ b/ui/theme/src/css/form.css
@@ -4,7 +4,7 @@
 
 :where(button) {
 	@apply text-inherit inline-flex items-center justify-center
-		interactive border-none rounded-full p-0 px-16 h-32 gap-8;
+		interactive border-none rounded-full py-4 px-16 min-h-32 gap-8;
 }
 
 :where(button[type="submit"]) {
