--- a/ui/theme-next/src/css/reset.css
+++ b/ui/theme-next/src/css/reset.css
@@ -4,47 +4,51 @@
 	box-sizing: border-box;
 }
 
-* {
+:where(*) {
 	padding: 0;
 	margin: 0;
 }
 
-img, picture, video, canvas, svg {
+:where(img, picture, video, canvas, svg) {
 	display: block;
 	max-inline-size: 100%;
 }
 
-input, button, textarea, select {
+:where(input, button, textarea, select) {
 	all: unset;
+	box-sizing: border-box;
 	font: inherit;
 	color: inherit;
 	word-spacing: inherit;
 	letter-spacing: inherit;
 }
 
-p, h1, h2, h3, h4, h5, h6 {
+:where(p, h1, h2, h3, h4, h5, h6) {
 	font: inherit;
 	overflow-wrap: break-word;
 }
 
-h1, h2, h3, h4, h5, h6 {
+:where(h1, h2, h3, h4, h5, h6) {
 	text-wrap: balance;
 }	
 
-ol, ul {
+:where(ol, ul) {
 	list-style: none;
 }
 
-blockquote, q {
+:where(blockquote, q) {
 	quotes: none;
 }
 
-blockquote::before, blockquote::after, q::before, q::after {
+:where(blockquote)::before, 
+:where(blockquote)::after, 
+:where(q)::before, 
+:where(q)::after {
 	content: '';
 	content: none;
 }
 
-table {
+:where(table) {
 	border-spacing: 0;
 	border-collapse: collapse;
 }
