--- a/ui/theme/src/css/fonts.css
+++ b/ui/theme/src/css/fonts.css
@@ -2,7 +2,7 @@
 @font-face {
 	font-family: Inter;
 	font-weight: 100 900;
-	src: url('../assets/fonts/InterVariable.subset.woff2') format('woff2');
+	src: url('../assets/fonts/InterVariable.woff2') format('woff2');
 	font-display: swap;
 }
 
@@ -10,6 +10,6 @@
 	font-family: Inter;
 	font-style: italic;
 	font-weight: 100 900;
-	src: url('../assets/fonts/InterVariable-Italic.subset.woff2') format('woff2');
+	src: url('../assets/fonts/InterVariable-Italic.woff2') format('woff2');
 	font-display: swap;
 } 
